perdition
Mail retrieval proxy server
Copyright (C) 1999-2003  Horms <horms@verge.net.au>
----------------------------------------------------------------------

XXX
(XXX)
   * XXX
   - Cleaned up imap4_write to not used returned local variables.
   - Show version when logging options
   - format string corretly handles username and domain when
     no domain_delimter is supplied by the end-user.

----------------------------------------------------------------------

12th February 2003
(Horms)
   * 1.11beta5
   - Return correct tag for server_ok_line
     broke somewhere in the 1.11beta series

----------------------------------------------------------------------

7th February 2003
(Horms)
   * 1.11beta4
   - Updated configure.in's download references
   - Fixed bug in server_ok_line option that caused
     connections to fail. Found by Marc Langer

----------------------------------------------------------------------

10th January 2003
(Horms)
   * 1.11beta3
   - Improved handling of real-server certificate validation.
     Don Kozlowski and Myself
   - Cleaned up build when compiled without SSL

----------------------------------------------------------------------

8th January 2003
(Horms)
   * 1.11beta2
   - Fixed handling of POP3 CAPA command
   - Cleaned up perditiondb(5) man page
   - Fixed packaging

----------------------------------------------------------------------

27th December 2002
(Horms)
   * 1.11beta1
   - Added Berkely DB map library contributed by Chris Stratford
   - Default db file for GDBM libary is now perdition.gdbm.db
   - Added TLS support. Thanks to Wolfgang Breyha
   - Fixed error in help and invocation in .spec file of
     the with-ldap-schema-directory configure option
   - Use loging convenicence macros provided by libvanessa_logger
     rather than providing our own.
   - Fixed bug in username mangling code, whereby the original username
     could be freed and subsequently become corupted. Effects