@@ -12,6 +12,8 @@ XXX
    - Show version when logging options
    - format string corretly handles username and domain when
      no domain_delimter is supplied by the end-user.
+   - Logger is reoppened on SIGHUP. This is particularly useful
+     perdition is logging to a file.
 
 ----------------------------------------------------------------------
 
